--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "About"
+title                    : "Samuel Alev"
 title_separator          : "-"
 name                     : &name "Samuel Alev"
 description              : &description "personal description"
@@ -109,7 +109,7 @@ author:
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "@SamuelAlev"
+  twitter          : "alevsamuel"
   vine             :
   weibo            :
   xing             :
