--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Samuel Alev"
   avatar           : "profile.png"
-  bio              : "20 years old &#1F680;<br/>Javascript lover, FullStack developer, Machine learning enthusiast"
+  bio              : "20 years old<br/>Javascript lover, FullStack developer, Machine learning enthusiast"
   location         : "Brussels, Belgium"
   employer         :
   pubmed           :
